--- a/pom.xml
+++ b/pom.xml
@@ -9,10 +9,10 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.example</groupId>
-    <artifactId>SportPlatform</artifactId>
+    <artifactId>MoviePlatform</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>SportPlatform</name>
-    <description>SportPlatform</description>
+    <name>MoviePlatform</name>
+    <description>MoviePlatform</description>
     <properties>
         <java.version>11</java.version>
     </properties>
